--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     ]
   },
   "devDependencies": {
-    "json-server": "1.0.0-beta.3"
+    "autoprefixer": "^10.4.21",
+    "json-server": "1.0.0-beta.3",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8"
   }
 }
